Fixed issue sub-header alignment

--- a/assets/sass/inc/_responsive.scss
+++ b/assets/sass/inc/_responsive.scss
@@ -476,7 +476,7 @@
 		}
 
 		#sub-header {
-			padding: 40px 0 50px 0;
+			padding: 55px 0 70px 0;
 
 			h1 {
 				font-size: 24px;
